--- a/settings.css
+++ b/settings.css
@@ -11,11 +11,17 @@ h1, h2, h6 {
     color: black
 }
 
+img {
+	float: left;
+    width: 350px; height:300px;
+}
+
 p {
     background-color: black;
     color: pink;
 }
 
-img {
-    width: 350px; height:300px;
+
+h6 {
+	clear: left;
 }
