adding css file and currently stuck on centering the buttons

--- a/settings.css
+++ b/settings.css
@@ -8,7 +8,7 @@ body {
 h1, h2, h6 {
     background-color: gold;
     font-family: "Rampart One", serif;
-    color: black
+    color: black;
 }
 
 img {
