additional fine touches to Comment Form

--- a/CommentForm/commentStyle.css
+++ b/CommentForm/commentStyle.css
@@ -4,5 +4,5 @@ body {
     background-repeat: no-repeat;
     background-positioning: center;
     background-attachment: fixed;
-    color: red;
+    color: gold;
 }
